--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
-@import url('reset.css');
+/*@import url('reset.css');
 @import url('fonts.css');
-
+*/
 /* Body */
 body{
     background-color: rgb(0, 0, 0);
@@ -9,29 +9,20 @@ body{
 /* Header */
 header{
     background-color: rgb(44, 44, 44);
-    padding-bottom: 80px;
 }
 
 div.top-header{
     color: white;
     background-color: rgb(55, 0, 128);
-    width: 80%;
-    max-width: 1020px;
-    margin: auto;
-    clear: both;
-    min-height: 77.2%;
-    padding: 10px;
 }
 
 img.icon-topHeader{
-    display: inline-block;
-    float: right;
+    
 }
 
 #titulo{
     font-size: 20pt;
     padding: 20px;
-    float: left;
     display: inline-block;
 }
 
