--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,57 +1,130 @@
-/*@import url('reset.css');
+@import url('reset.css');
 @import url('fonts.css');
-*/
 /* Body */
 body{
-    background-color: rgb(0, 0, 0);
+    background-image: url(../Images/backgrounds/background01.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: #FFFFFF
 }
-
-/* Header */
 header{
-    background-color: rgb(44, 44, 44);
+    background-color: #F6A6FF;
+    padding: 10px;
+    text-align: center;
 }
 
-div.top-header{
-    color: white;
-    background-color: rgb(55, 0, 128);
+div.header-right{
+    display: block;
+    float: left;
+}
+div.header-left{
+    display: block;
+    float: right;
 }
 
-img.icon-topHeader{
+div.header-center{
+    display: block;
+    width: 80%;
+    max-width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
+    float:none;
+    text-align: left;
+}
+
+img.icon-Header{
+    margin: 2px;
+    height: 30px;
+}
+
+#btnMenu, #btnShop, #btnUser{
+    background-color: #F6A6FF;
+    border-style: none;
+}
+
+input[type=checkbox]{
+    display: none;
+}
+
+input[type="checkbox"]:checked ~ #menu{
+    transform: translate(300px);
+    transition: all 300ms;
+}
+input[type="checkbox"]:checked ~ #lblMenu{
+    transform: translate(300px);
+    transition: all 300ms;
+}
+
+nav{
+    position: fixed;
+    height: 100%;
+    width: 300px;
+    top: 0px;
+    display: block;
+    transition: all 300ms;
+}
+
+#menu{
+    background-color: #a554f1;
+    position: fixed;
+    height: 100%;
+    width: 300px;
+    left: -300px;
+    display: block;
+    transition: all 300ms;
+}
+
+#lblMenu{
+    margin: 10px;
+    position: fixed;
+    transition: all 300ms;
     
 }
 
-#titulo{
-    font-size: 20pt;
+.optionMenu{
+    background-color: rgb(247, 162, 239);
+    padding: 10px;
+    margin: 5px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.optionMenu:hover{
+    background-color: rgb(252, 102, 237);
+}
+
+div ul li a{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+#slider{
+    background-color: #e0393934;
+    text-align: center;
     padding: 20px;
-    display: inline-block;
-}
-
-/* Nav */
-nav{
-    background-color: rgb(0, 162, 255);
-}
-
-/* Wrap */
-#wrap{
-    background-color: rgb(71, 245, 2);
     width: 80%;
-    max-width: 1020px;
-    margin: auto;
-    clear: both;
-    min-height: 77.2%;
+    height: 80px;
+    max-width: 1080px;
+    min-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: white;
 }
 
-/* Main */
-main{
-    background-color: rgb(255, 251, 0);
-}
-
-/* Aside */
-aside{
-    background-color: rgb(0, 255, 242);
-}
-
-/* Footer */
-footer{
-    background-color: rgb(98, 3, 161);
+#wrap{
+    background-color: #e0393934;
+    text-align: center;
+    padding: 20px;
+    width: 80%;
+    height: 3000px;
+    max-width: 1080px;
+    min-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: white;
 }
