--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,17 +1,28 @@
 @import url('reset.css');
 @import url('fonts.css');
+@import url(variables.css);
+
 /* Body */
-body{
-    background-image: url(../Images/backgrounds/background01.jpg);
-    background-size: 100%;
+body {
+    background-image: url(../Images/backgrounds/background03.jpg);
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: #FFFFFF
+    /*background: #42275a;  /* fallback for old browsers */
+    /*background: -webkit-linear-gradient(to bottom, #734b6d, #42275a);  /* Chrome 10-25, Safari 5.1-6 */
+    /*background: linear-gradient(to bottom, #734b6d, #42275a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    color: #FFFFFF;
 }
 header{
-    background-color: #F6A6FF;
+    background: var(--Header-color);
+    background: var(--Header-color-wekit);
+    background: var(--Header-color-linear-gradient);
     padding: 10px;
     text-align: center;
+    position: fixed;
+    width: 100%;
+    top: 0px;
 }
 
 div.header-right{
@@ -21,9 +32,12 @@ div.header-right{
 div.header-left{
     display: block;
     float: right;
+    position: fixed;
+    right: 30px;
 }
 
 div.header-center{
+    font-size: 50px;
     display: block;
     width: 80%;
     max-width: 1080px;
@@ -35,11 +49,11 @@ div.header-center{
 
 img.icon-Header{
     margin: 2px;
-    height: 30px;
+    height: 40px;
 }
 
 #btnMenu, #btnShop, #btnUser{
-    background-color: #F6A6FF;
+    background-color: #00000000;
     border-style: none;
 }
 
@@ -61,16 +75,19 @@ nav{
     height: 100%;
     width: 300px;
     top: 0px;
+    left: -300px;
     display: block;
     transition: all 300ms;
 }
 
 #menu{
-    background-color: #a554f1;
+    background: var(--Nav-color);
+    background: var(--Nav-color-webkit);
+    background: var(--Nav-color-linear-gradient);
     position: fixed;
     height: 100%;
     width: 300px;
-    left: -300px;
+    /*left: -300px;*/
     display: block;
     transition: all 300ms;
 }
@@ -79,11 +96,16 @@ nav{
     margin: 10px;
     position: fixed;
     transition: all 300ms;
+    left: 0px;
+    padding: 5px;
+    border-radius: 5px;
     
 }
 
 .optionMenu{
-    background-color: rgb(247, 162, 239);
+    background: var(--Buttons-color);
+    background: var(--Buttons-color-webkit);
+    background: var(--Buttons-color-linear-gradient);
     padding: 10px;
     margin: 5px;
     text-align: center;
@@ -91,40 +113,110 @@ nav{
 }
 
 .optionMenu:hover{
-    background-color: rgb(252, 102, 237);
+    background: var(--Highlight-color);
+    background: var(--Highlight-color-webkit);
+    background: var(--Highlight-color-linear-gradient);
 }
 
 div ul li a{
     text-decoration: none;
-    color: #FFFFFF;
+    color: rgb(255, 255, 255);
 }
 
 #slider{
-    background-color: #e0393934;
+    background: #3a6186;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #89253e99, #3a618699);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #89253e99, #3a618699); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     text-align: center;
     padding: 20px;
     width: 80%;
-    height: 80px;
+    height: 400px;
     max-width: 1080px;
     min-width: 500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 80px;
     margin-bottom: 20px;
     color: white;
 }
 
-#wrap{
-    background-color: #e0393934;
+#slider img{
+    width: 90%;
+    height: 100%;
+}
+
+main{
     text-align: center;
-    padding: 20px;
     width: 80%;
-    height: 3000px;
     max-width: 1080px;
     min-width: 500px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+section.container{
+    margin: 20px 0px 0px 0px;
+}
+section.container H2{ 
+    background: var(--Titles-section-color);
+    background: var(--Titles-section-color-webkit);
+    background: var(--Titles-section-color-linear-gradient);
+    border-radius: 10PX;
     color: white;
+    padding: 15px;
+    font-size: 24pt;
+    margin: 0px 0px 20px 0px
+}
+
+section.container div.content-section{
+    background: var(--Content-section-color);
+    background: var(--Content-section-color-webkit);
+    background: var(--Content-section-color-linear-gradient);
+    padding: 15px 0px 15px 0px;
+}
+
+div.content-product{
+    background-color: rgb(253, 218, 222);;
+    margin: 5px;
+    display: inline-block;
+    width: 23%;
+}
+
+div.content-product img{
+    width: 95%;
+    margin: 2.5%;
+}
+
+div.content-product H3{
+    font-size: 20pt;
+    margin: 10px 0px 10px 0px;
+}
+
+.description-product{
+    text-align: justify;
+}
+
+.ranking{
+    margin: 10px;
+}
+label{ color:grey; font-size: 30pt;}
+input[type = "radio"]{ display:none;}
+.clasificacion{
+    direction: rtl;/* right to left */
+    unicode-bidi: bidi-override;/* bidi de bidireccional */
+}
+label:hover{color:rgb(11, 108, 138);}
+label:hover ~ label{color:rgb(11, 108, 138);}
+input[type="radio"]:checked ~ label{color: rgb(11, 108, 138);}
+
+footer{
+    background: var(--Footer-color);
+    background: var(--Footer-color-webkit);
+    background: var(--Footer-color-linear-gradient);
+    text-align: center;
+    height: 200px;
+    width: 100%;
 }
