--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -6,9 +6,13 @@
     --Header-color-linear-gradient: linear-gradient(to left, #89253e, #3894d1, #2b7a63, #89253e, #3894d1, #2b7a63);
     /*Menu Lateral*/
     --Nav-color: #075269;  /* fallback for old browsers */
-    --Nav-color-webkit: -webkit-linear-gradient(to bottom, #89253e99, #2b7a6399);  /* Chrome 10-25, Safari 5.1-6 */
-    --Nav-color-linear-gradient: linear-gradient(to bottom, #89253e99, #2b7a6399); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    --Nav-color-webkit: -webkit-linear-gradient(to bottom, #89253e99, #2b7a6399);
+    --Nav-color-linear-gradient: linear-gradient(to bottom, #89253e99, #2b7a6399);
     
+    --Slider-color:#3a6186;  
+    --Slider-color-webkit: -webkit-linear-gradient(to bottom, #89253e99, #3a618699);
+    --Slider-color-linear-gradient: linear-gradient(to bottom, #89253e99, #3a618699);
+
     --Highlight-color: #d138c4;
     --Highlight-webkit: -webkit-linear-gradient(to right, #1f6a9c, #165b47);
     --Highlight-color-linear-gradient: linear-gradient(to right, #1f6a9c, #165b47);
@@ -19,15 +23,15 @@
 
     --Titles-section-color: #589634;
     --Titles-section-color-webkit: -webkit-linear-gradient(to right, #1f6a9c, #165b47);
-    --Titles-section-color-linear-gradient:linear-gradient(to right, #3894d1, #2b7a63);
+    --Titles-section-color-linear-gradient:linear-gradient(to right, #1f6a9c, #165b47);
 
     --Content-section-color: #433496;
-    --Content-section-color-webkit: -webkit-linear-gradient(to right, #593cc099, #89253e99);
-    --Content-section-color-linear-gradient:linear-gradient(to right, #593cc099, #89253e99);
+    --Content-section-color-webkit: -webkit-linear-gradient(to right, #89253e99, #5c38d199, #80107199);
+    --Content-section-color-linear-gradient:linear-gradient(to right, #89253e99, #5c38d199, #80107199);
 
     --Content-product-color: #433496;
-    --Content-product-color-webkit: -webkit-linear-gradient(to right, #2b7a6399, #e7511699);
-    --Content-product-color-linear-gradient:linear-gradient(to right, #2b7a6399, #e7511699);
+    --Content-product-color-webkit: -webkit-linear-gradient(to top, #1f6a9c99, #165b4799);
+    --Content-product-color-linear-gradient:linear-gradient(to top, #1f6a9c99, #165b4799);
 
     --Footer-color: #025f48;
     --Footer-color-webkit: -webkit-linear-gradient(to right, #000586, #598786, #896535);
